--- a/index.html
+++ b/index.html
@@ -26,48 +26,48 @@
             <div class="input-section">
                 <label for="activity-input" class="hour" id="nine-am">9AM</label>
                 <textarea id="nine-am-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index='0'>Complete</button>
+                <button class="save-button" data-index="0">Save</button>
             </div>    
             <div class="input-section">
                 <label for="activity-input" class="hour" id="ten-am">10AM</label>
                 <textarea id="ten-am-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index="1">Complete</button>
+                <button class="save-button" data-index="1">Save</button>
                 
             </div>      
             <div class="input-section">
                 <label for="activity-input" class="hour" id="eleven-am">11AM</label>
                 <textarea id="eleven-am-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index="2">Complete</button>
+                <button class="save-button" data-index="2">Save</button>
             </div> 
             <div class="input-section">
-                <label for="activity-input" class="hour" id="twelve-pm">12AM</label>
+                <label for="activity-input" class="hour" id="twelve-pm">12PM</label>
                 <textarea id="twelve-pm-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index="3">Complete</button>
+                <button class="save-button" data-index="3">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="one-pm">1PM</label>
                 <textarea id="one-pm-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index="4">Complete</button>
+                <button class="save-button" data-index="4">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="two-pm">2PM</label>
                 <textarea id="two-pm-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index="5">Complete</button>
+                <button class="save-button" data-index="5">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="three-pm">3PM</label>
                 <textarea id="three-pm-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index="6">Complete</button>
+                <button class="save-button" data-index="6">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="four-pm">4PM</label>
                 <textarea id="four-pm-text" class="activity-input"></textarea>
-                <button class="complete-button" data-index="7">Complete</button>
+                <button class="save-button" data-index="7">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="five-pm">5PM</label>
                 <textarea id="five-pm-text" class="activity-input"></textarea>    
-                <button class="complete-button" data-index="8">Complete</button>
+                <button class="save-button" data-index="8">Save</button>
             </div> 
         </form>
     </section>
