updated Jquery to get store to local storage to work.  started code for get from local storage

--- a/index.html
+++ b/index.html
@@ -18,55 +18,56 @@
         <div class="container">
           <h1 class="display-4">Work Day Scheduler</h1>
           <p class="lead">A simple calendar app for scheduling you work day</p>
-          <p class="lead">add Date with JQuery</p>
+          <p class="lead" id="date">add Date with JQuery</p>
         </div>       
     </div>
     <section class="container">
         <form class="planner">
             <div class="input-section">
                 <label for="activity-input" class="hour" id="nine-am">9AM</label>
-                <textarea id="nine-am-text" class="activity-input"></textarea>
+                <textarea id="9" class="activity-input" data-index="0"></textarea>
                 <button class="save-button" data-index="0">Save</button>
+                
             </div>    
             <div class="input-section">
                 <label for="activity-input" class="hour" id="ten-am">10AM</label>
-                <textarea id="ten-am-text" class="activity-input"></textarea>
+                <textarea id="10" class="activity-input" data-index="1"></textarea>
                 <button class="save-button" data-index="1">Save</button>
                 
             </div>      
             <div class="input-section">
                 <label for="activity-input" class="hour" id="eleven-am">11AM</label>
-                <textarea id="eleven-am-text" class="activity-input"></textarea>
+                <textarea id="11" class="activity-input"></textarea>
                 <button class="save-button" data-index="2">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="twelve-pm">12PM</label>
-                <textarea id="twelve-pm-text" class="activity-input"></textarea>
+                <textarea id="12" class="activity-input"></textarea>
                 <button class="save-button" data-index="3">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="one-pm">1PM</label>
-                <textarea id="one-pm-text" class="activity-input"></textarea>
+                <textarea id="1" class="activity-input"></textarea>
                 <button class="save-button" data-index="4">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="two-pm">2PM</label>
-                <textarea id="two-pm-text" class="activity-input"></textarea>
+                <textarea id="2" class="activity-input"></textarea>
                 <button class="save-button" data-index="5">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="three-pm">3PM</label>
-                <textarea id="three-pm-text" class="activity-input"></textarea>
+                <textarea id="3" class="activity-input"></textarea>
                 <button class="save-button" data-index="6">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="four-pm">4PM</label>
-                <textarea id="four-pm-text" class="activity-input"></textarea>
+                <textarea id="4" class="activity-input"></textarea>
                 <button class="save-button" data-index="7">Save</button>
             </div> 
             <div class="input-section">
                 <label for="activity-input" class="hour" id="five-pm">5PM</label>
-                <textarea id="five-pm-text" class="activity-input"></textarea>    
+                <textarea id="5" class="activity-input"></textarea>    
                 <button class="save-button" data-index="8">Save</button>
             </div> 
         </form>
